--- a/fly-io-privatebin-nginx.conf
+++ b/fly-io-privatebin-nginx.conf
@@ -1,5 +1,6 @@
 
 daemon               off;
+user                 root;
 pid                  /run/nginx.pid;
 worker_processes     auto;
 worker_rlimit_nofile 13768;
