--- a/pb.ini
+++ b/pb.ini
@@ -3,7 +3,7 @@ nodaemon=true
 
 [program:php-fpm]
 priority=1
-command=/usr/sbin/php-fpm7 -R
+command=/usr/sbin/php-fpm7 -R -F
 autorestart=true
 
 [program:nginx]
